# grammar2code

./: CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
.github/workflows/: build.yml  test.yml
src/: version.h.in
tests/unit/: always_pass.cpp
tools/: update_version.cmake
